Styled loading animation, added description to status, added color to status, and shifted spacing on description fields on the orders page. Also, fixed loading issues with cancel order.

--- a/css/loading.css
+++ b/css/loading.css
@@ -4,7 +4,7 @@
     background: #16171d;
     opacity: 0.9;
     position: fixed;
-    z-index: 10000;
+    z-index:10000;
   }
 
   .loading > div {
@@ -92,7 +92,7 @@
     margin-left: -50px;
     top: 50%;
     margin-top: 30px;
-    color: #1ecd97;
+    color: #ff8c00;
     font-size: 12px;
     text-align: center;
   }
